	* support more fine-grained torrent states between which peer sources it
	  announces to
	* supports calculating sha1 file-hashes when creating torrents
	* made the send_buffer_watermark performance warning more meaningful
	* supports complete_ago extension
	* dropped zlib as a dependency and builds using puff.c instead
	* made the default cache size depend on available physical RAM
	* added flags to torrent::status() that can filter which values are calculated
	* support 'explicit read cache' which keeps a specific set of pieces
	  in the read cache, without implicitly caching other pieces
	* support sending suggest messages based on what's in the read cache
	* clear sparse flag on files that complete on windows
	* support retry-after header for web seeds
	* replaced boost.filesystem with custom functions
	* replaced dependency on boost.thread by asio's internal thread primitives
	* added support for i2p torrents
	* cleaned up usage of MAX_PATH and related macros
	* made it possible to build libtorrent without RTTI support
	* added support to build with libgcrypt and a shipped version of libtommath
	* optimized DHT routing table memory usage
	* optimized disk cache to work with large caches
	* support variable number of optimistic unchoke slots and to dynamically
	  adjust based on the total number of unchoke slots
	* support for BitTyrant choker algorithm
	* support for automatically start torrents when they receive an
	  incoming connection
	* added more detailed instrumentation of the disk I/O thread

	* properly detect windows version to initialize half-open connection limit
	* fixed bug in url encoder where $ would not be encoded

0.15 release

	* introduced a session state save mechanism. load_state() and save_state().
	  this saves all session settings and state (except torrents)
	* deprecated dht_state functions and merged it with the session state
	* added support for multiple trackers in magnet links